--- a/.github/workflows/jekyll_site.yml
+++ b/.github/workflows/jekyll_site.yml
@@ -1,4 +1,5 @@
-name: Mkdocs Site
+name: Jekyll site CI/CD
+
 on:
   workflow_call:
     inputs:
@@ -22,21 +23,16 @@ on:
         type: string
         required: false
         default: ""
+      path:
+        description: "Path to the Jekyll project directory."
+        type: string
+        required: false
+        default: "."
       artifact-name:
         description: "Artifact name for the built site."
         type: string
         required: false
         default: "github-pages"
-      version:
-        description: "Optional version of deployment."
-        type: string
-        required: false
-        default: ""
-      release-tag:
-        description: "Optional release tag for release-mode version publish."
-        type: string
-        required: false
-        default: ""
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -50,16 +46,20 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-
-  build-docs:
+  build-site:
     runs-on: ubuntu-latest
     outputs:
       host: ${{ steps.pages.outputs.host || steps.defaults.outputs.host }}
       base-path: ${{ steps.pages.outputs.base_path || steps.defaults.outputs.base_path }}
-
     steps:
       - name: Checkout
-        uses: actions/checkout@v6
+        uses: actions/checkout@v4
+
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1.288.0
+        with:
+          working-directory: ${{ inputs.path }}
+          bundler-cache: true
 
       - name: Default outputs
         id: defaults
@@ -74,29 +74,29 @@ jobs:
         with:
           token: ${{ inputs.token }}
           enablement: ${{ inputs.enablement }}
-        
-      - name: Setup mkdocs config
-        uses: athackst/ci/actions/mkdocs-config@main
 
-      - name: Build docs
-        id: mkdocs
-        uses: athackst/mkdocs-simple-plugin@main
-        with:
-          push: false
+      - name: Build with Jekyll
+        # Outputs to the './_site' directory by default
+        working-directory: ${{ inputs.path }}
+        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path || steps.defaults.outputs.base_path }}"
+        env:
+          JEKYLL_ENV: production
+          JEKYLL_GITHUB_TOKEN: ${{ inputs.token }}
 
       - name: Debug output
         run: |
           tree
-          cat site/index.html
+          cat "${{ inputs.path }}/_site/index.html"
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v4
         with:
           name: ${{ inputs.artifact-name }}
-          path: ./site
+          path: ${{ inputs.path }}/_site
 
-  test-docs:
-    needs: build-docs
+  test-site:
+    needs: build-site
+    if: ${{ always() }}
     permissions:
       contents: read
     runs-on: ubuntu-latest
@@ -104,47 +104,21 @@ jobs:
       - name: Test with htmlproofer
         uses: athackst/ci/actions/htmlproofer@main
         with:
-          host: ${{ needs.build-docs.outputs.host }}
-          base-path: ${{ needs.build-docs.outputs.base-path }}
+          host: ${{ needs.build-site.outputs.host }}
+          base-path: ${{ needs.build-site.outputs.base-path }}
           artifact-name: ${{ inputs.artifact-name }}
           ignore-urls: |
             ${{ inputs.htmlproofer-ignore-urls }}
 
-  deploy-docs:
-    # Use artifact deploy if no version is specified and we're on the main branch.
-    if: ${{ inputs.pages && inputs.version == '' && github.ref == 'refs/heads/main' }}
-    needs: build-docs
+  # Deployment job
+  deploy:
+    if: ${{ inputs.pages && github.ref == 'refs/heads/main' }}
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+    needs: build-site
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-
-  deploy-version-docs:
-    # Use mkdocs mike to deploy if a version is specified
-    if: ${{ inputs.pages && inputs.version != '' && ( github.ref == 'refs/heads/main' || inputs.release-tag != '' ) }}
-    needs: build-docs
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v6
-      - name: Setup mkdocs config
-        uses: athackst/ci/actions/mkdocs-config@main
-      - name: Setup environment (release)
-        if: ${{ inputs.release-tag != '' }}
-        run: |
-          echo "VERSION=${{ inputs.release-tag }} ${{ inputs.version }}" >> $GITHUB_ENV
-          echo "DEFAULT_VERSION=${{ inputs.release-tag }}" >> $GITHUB_ENV
-      - name: Setup environment (dev)
-        if: ${{ inputs.release-tag == '' }}
-        run: |
-          echo "VERSION=${{ inputs.version }}" >> $GITHUB_ENV
-          echo "DEFAULT_VERSION=" >> $GITHUB_ENV
-      - name: Publish Release docs
-        uses: athackst/mkdocs-simple-plugin@main
-        with:
-          version: ${{ env.VERSION }}
-          default_version: ${{ env.DEFAULT_VERSION }}
