--- a/.github/workflows/test_workflows.yml
+++ b/.github/workflows/test_workflows.yml
@@ -14,17 +14,96 @@ jobs:
     uses: ./.github/workflows/pr_labeler.yml
     secrets: inherit
 
-  # workflow-mkdocs-site:
-  #   permissions:
-  #     contents: write
-  #     pages: write
-  #     id-token: write
-  #   uses: ./.github/workflows/mkdocs_site.yml
-  #   secrets: inherit
-  #   with:
-  #     pages: false
-  #     htmlproofer-ignore-urls: |
-  #       /^https://github.com/athackst/ci$/
+  workflow-mkdocs-site:
+    permissions:
+      contents: write
+      pages: write
+      id-token: write
+    uses: ./.github/workflows/mkdocs_site.yml
+    secrets: inherit
+    with:
+      pages: false
+      artifact-name: github-pages-mkdocs-test
+      htmlproofer-ignore-urls: |
+        /^https://github.com/athackst/ci$/
+
+  workflow-mkdocs-site-verify:
+    permissions:
+      contents: read
+    needs: [workflow-mkdocs-site]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download mkdocs artifact
+        uses: actions/download-artifact@v7
+        with:
+          name: github-pages-mkdocs-test
+          path: ./artifact
+
+      - name: Verify mkdocs artifact contents
+        shell: bash
+        run: |
+          set -euo pipefail
+
+          mkdir -p site
+          if [ -f ./artifact/artifact.tar ]; then
+            tar --directory site -xvf ./artifact/artifact.tar
+          else
+            TAR_FILE="$(find ./artifact -maxdepth 2 -type f -name '*.tar' | head -n1)"
+            if [ -n "$TAR_FILE" ]; then
+              tar --directory site -xvf "$TAR_FILE"
+            else
+              cp -R ./artifact/. site/
+            fi
+          fi
+
+          test -f site/index.html
+          grep -q "<html" site/index.html
+
+  workflow-jekyll-site:
+    permissions:
+      contents: write
+      pages: write
+      id-token: write
+    uses: ./.github/workflows/jekyll_site.yml
+    secrets: inherit
+    with:
+      path: tests/fixtures/jekyll_site
+      pages: false
+      artifact-name: github-pages-jekyll-test
+      htmlproofer-ignore-urls: |
+        /^https://github.com/athackst/ci$/
+
+  workflow-jekyll-site-verify:
+    permissions:
+      contents: read
+    needs: [workflow-jekyll-site]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download Jekyll artifact
+        uses: actions/download-artifact@v7
+        with:
+          name: github-pages-jekyll-test
+          path: ./artifact
+
+      - name: Verify Jekyll artifact contents
+        shell: bash
+        run: |
+          set -euo pipefail
+
+          mkdir -p _site
+          if [ -f ./artifact/artifact.tar ]; then
+            tar --directory _site -xvf ./artifact/artifact.tar
+          else
+            TAR_FILE="$(find ./artifact -maxdepth 2 -type f -name '*.tar' | head -n1)"
+            if [ -n "$TAR_FILE" ]; then
+              tar --directory _site -xvf "$TAR_FILE"
+            else
+              cp -R ./artifact/. _site/
+            fi
+          fi
+
+          test -f _site/index.html
+          grep -q "Jekyll Fixture" _site/index.html
 
   workflow-release-draft:
     permissions:
@@ -72,8 +151,8 @@ jobs:
   actions-success:
     needs:
       - workflow-pr-labeler
-      - workflow-mkdocs-site
-      - workflow-release-draft
+      - workflow-mkdocs-site-verify
+      - workflow-jekyll-site-verify
       - workflow-release-draft-verify-and-cleanup
     runs-on: ubuntu-latest
     steps:
